requested changes done

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <!--preloader is here-->
 <div id="preload">
     <div class="loader">
-        <div class="pacman">
+        <div class="line-scale">
             <div></div>
             <div></div>
             <div></div>
@@ -54,7 +54,7 @@
 <!--preloader ends here-->
 
 <!--navbar component-->
-<nav class="navbar navbar-expand-lg fixed-top navbar-dark">
+<nav class="navbar navbar-expand-lg navbar-dark">
     <a class="navbar-brand" href="#banner-head">
         <img id="logo" src="./assets/images/LogoMono.png" width="40" height="50" class="d-inline-block align-top" alt="elixir,DTU">
     </a>
@@ -63,10 +63,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav mx-auto">
-            <li class="nav-item">
+            <!--<li class="nav-item">-->
 
-                <a class="nav-link" id="link" href="#banner-head"><i class="fas fa-home fa-nav"></i>Home</a>
-            </li>
+                <!--<a class="nav-link" id="link" href="#banner-head"><i class="fas fa-home fa-nav"></i>Home</a>-->
+            <!--</li>-->
             <li class="nav-item">
                 <a class="nav-link" id="link1" href="#what-we-do"><i class="fas fa-pen-fancy fa-nav"></i>About Us</a>
             </li>
@@ -128,13 +128,13 @@
         </p>
     </div>
     <div id="img-group" class="row justify-content-center">
-        <div class="col-md-3 m-3" data-aos="slide-down" data-aos-duration="600">
+        <div class="col-md-3 m-3" data-aos="slide-up" data-aos-duration="600">
             <img src="./assets/images/x%20(142).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
-        <div class="col-md-3 m-3" data-aos="slide-down" data-aos-duration="600">
+        <div class="col-md-3 m-3" data-aos="slide-up" data-aos-duration="600">
             <img src="./assets/images/x%20(141).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
-        <div class="col-md-3 m-3" data-aos="slide-down" data-aos-duration="600">
+        <div class="col-md-3 m-3" data-aos="slide-up" data-aos-duration="600">
             <img src="./assets/images/x%20(140).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
         <div class="col-md-3 m-3" data-aos="slide-up" data-aos-duration="600">
@@ -168,7 +168,7 @@
                         Participate in the various sessions organised by Elixir by registering with us
                         and be healthy and fit.</p>
                 </div>
-                <div class="col-md-5 col-sm-12">
+                <div class="col-md-5 col-sm-8">
                     <button class="btn btn-outline-success">Register to attend</button>
                 </div>
 
@@ -187,7 +187,7 @@
                         be a part of the various departments at Elixir — Content,
                         PR & Publicity, IT & Design, Corporate, Logistics, Health Expert.</p>
                 </div>
-                <div class="col-md-5 col-sm-12">
+                <div class="col-md-5 col-sm-8">
                     <a href="./JOINING-ELIXIR.html">
                         <button class="btn btn-outline-success">Apply for membership</button>
                     </a>
@@ -203,12 +203,12 @@
 <!--connect with us-->
 <div class="container-fluid" id="connect">
     <div class="row justify-content-center">
-        <div class="col-md-4 col-sm-6 mt-5" data-aos="slide-down" data-aos-duration="800">
-            <h2 style="color:#FFF; display: inline-block;"><i class="fas fa-hand-peace fa-2x" style="margin:2vh; color:#EF5324;"></i>Let's connect !!</h2>
+        <div class="col-md-5 col-sm-6 mt-5" data-aos="slide-down" data-aos-duration="800">
+            <h2 style="color:#FFF; display: inline-block;"><i class="fas fa-comments fa-2x" style="margin:2vh; color:#EF5324;"></i>Let's connect !!</h2>
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-md-4 col-sm-6 mt-3" style="font-size: 24pt" >
+        <div class="col-md-5 col-sm-6 mt-3" style="font-size: 24pt" >
             <a href="https://www.facebook.com/elixirHealthSociety/" target="_blank"><i class="sm_handles fab fa-facebook-f"></i></a>
             <a href="#" target="_blank"><i class="sm_handles fab fa-medium-m"></i></a>
             <a href="mailto:elixir.healthsociety@gmail.com"><i class=" sm_handles far fa-lg fa-envelope-open"></i></a>
